--- a/app/src/main/res/layout/activity_carousel_view.xml
+++ b/app/src/main/res/layout/activity_carousel_view.xml
@@ -3,15 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-<!--    button daba (shondorjo, centre)-->
-<!--    set id of button-->
-    <Button
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerInParent="true"
-        android:text="enterButton"
-        android:id="@+id/enterButton"
+        android:text="Yo! I am here"
         />
-
 
 </RelativeLayout>
