Modifying login activity

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,103 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#7D5CB8"
     tools:context=".LoginActivity">
+
+    <ImageView
+        android:layout_width="300dp"
+        android:layout_height="250dp"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/login_img"
+        android:id="@+id/loginImg"
+        />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="113dp"
-        android:layout_marginTop="175dp"
-        android:layout_marginEnd="115dp"
-        android:layout_marginBottom="36dp"
+        android:layout_centerHorizontal="true"
         android:text="FUR BABIES"
-        android:textColor="#FFFFFF"
+        android:fontFamily="sans-serif-medium"
+        android:textColor="#000"
         android:textSize="34sp"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_below="@+id/loginImg"
+        />
 
     <EditText
         android:id="@+id/editTextTextEmailAddress"
-        android:layout_width="348dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="22dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginBottom="13dp"
-        android:ems="10"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="40dp"
         android:foregroundTint="#FFFFFF"
         android:inputType="textEmailAddress"
         android:shadowColor="#FFFFFF"
-        android:text="Email"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        android:hint="Email"
+        android:textColor="#000"
+        android:layout_below="@+id/textView"
+       />
 
     <EditText
         android:id="@+id/editTextTextPassword"
-        android:layout_width="351dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="22dp"
-        android:ems="10"
-        android:foregroundTint="#FFFFFF"
+        android:layout_centerHorizontal="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginHorizontal="40dp"
         android:inputType="textPassword"
-        android:text="Password"
-        android:textColor="#FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />
+        android:hint="Password"
+        android:textColor="#000"
+        android:layout_below="@+id/editTextTextEmailAddress"
+      />
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="339dp"
-        android:layout_height="56dp"
-        android:layout_marginStart="27dp"
-        android:layout_marginTop="12dp"
+        android:id="@+id/loginButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="40dp"
         android:text="LOGIN"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
+        android:backgroundTint="#77C3EC"
+        android:layout_below="@+id/editTextTextPassword"
+        />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/signUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="168dp"
-        android:layout_marginTop="136dp"
+        android:layout_below="@+id/forgetPass"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="50dp"
         android:text="Sign Up"
-        android:textColor="#FFFFFF"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        android:textColor="#000" />
 
     <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
+        android:id="@+id/forgetPass"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="112dp"
-        android:layout_marginTop="12dp"
-        android:text="Register as a Fur Mommy"
-        android:textColor="#FFFFFF"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:layout_marginHorizontal="40dp"
+        android:text="Forgot Password?"
+        android:fontFamily="sans-serif"
+        android:textColor="#000"
+        android:textSize="15dp"
+        android:layout_below="@+id/loginButton"
+        />
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="27dp"
-        android:layout_marginTop="36dp"
-        android:text="Forgot Password"
-        android:textColor="#FFEDED"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+<!--    <TextView-->
+<!--        android:id="@+id/textView4"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Register as Fur Mommy"-->
+<!--        android:textColor="#000"-->
+<!--        android:textSize="16sp"-->
+<!--        android:layout_below="@+id/textView3"-->
+<!--        />-->
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</RelativeLayout>
