--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,137 +1,135 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#7D5CB8"
-    tools:context=".SignUp">
+    android:background="@drawable/sign_up_bg"
+    tools:context=".SignUpActivity">
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/signUpTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="96dp"
-        android:layout_marginTop="68dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="180dp"
         android:text="FUR BABIES"
-        android:textColor="#FFFFFF"
-        android:textSize="34sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textColor="#000"
+        android:textSize="35sp"/>
 
     <EditText
-        android:id="@+id/editTextTextEmailAddress3"
-        android:layout_width="348dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="14dp"
-        android:ems="10"
-        android:foregroundTint="#FFFFFF"
+        android:id="@+id/signUpEmail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="40dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/signUpTitle"
         android:inputType="textEmailAddress"
-        android:shadowColor="#FFFFFF"
-        android:text="Email"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextDate2"/>
+        android:hint="Email"
+        android:textColor="#000"
+        />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
-        android:layout_width="346dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="30dp"
-        android:ems="10"
+        android:id="@+id/signUpName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="40dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
         android:inputType="textPersonName"
-        android:text="Name"
-        android:textColor="#FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+        android:layout_below="@+id/signUpEmail"
+        android:hint="Name"
+        android:textColor="#000"
+    />
 
     <EditText
-        android:id="@+id/editTextDate2"
-        android:layout_width="345dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        android:ems="10"
+        android:id="@+id/signUpDob"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="40dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
         android:inputType="date"
-        android:text="Date of Birth"
-        android:textColor="#FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+        android:layout_below="@+id/signUpName"
+        android:hint="Date of Birth"
+        android:textColor="#000"
+        />
 
     <EditText
-        android:id="@+id/editTextPhone"
-        android:layout_width="345dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="13dp"
-        android:ems="10"
+        android:id="@+id/signUpPhone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="40dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:textColor="#000"
         android:inputType="phone"
-        android:text="Contact Number"
-        android:textColor="#FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress3" />
+        android:hint="Contact Number"
+        android:layout_below="@+id/signUpDob"
+        />
 
     <EditText
-        android:id="@+id/editTextTextPassword2"
-        android:layout_width="wrap_content"
+        android:id="@+id/signUpPw"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:ems="10"
+        android:layout_marginHorizontal="40dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:textColor="#000"
         android:inputType="textPassword"
-        android:minHeight="48dp"
-        android:text="Password"
-        android:textColor="#FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        android:hint="Password"
+        android:layout_below="@+id/signUpPhone"
+      />
 
     <EditText
-        android:id="@+id/editTextTextPassword3"
-        android:layout_width="wrap_content"
+        android:id="@+id/signUpConfirmPw"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="5dp"
-        android:ems="10"
+        android:layout_marginHorizontal="40dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:textColor="#000"
         android:inputType="textPassword"
-        android:minHeight="48dp"
-        android:text="Password"
-        android:textColor="#FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+        android:hint="Confirm Password"
+        android:layout_below="@+id/signUpPw"
+       />
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
+    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_below="@+id/signUpConfirmPw"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
-        android:text="Password:"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginTop="15dp"
-        android:text="Confirm Password"
-        android:textColor="#FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />
+        android:layout_marginHorizontal="40dp"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal"
+        android:id="@+id/radioButton">
+        <RadioButton android:id="@+id/radioFurBaby"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Fur Baby"
+            android:onClick="onRadioButtonClicked"
+            android:layout_marginEnd="20dp"
+            android:fontFamily="sans-serif-medium"
+            />
+        <RadioButton android:id="@+id/radioFurMommy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Fur Mommy"
+            android:fontFamily="sans-serif-medium"
+            android:onClick="onRadioButtonClicked"/>
+    </RadioGroup>
 
     <Button
-        android:id="@+id/button2"
-        android:layout_width="338dp"
-        android:layout_height="63dp"
-        android:layout_marginStart="35dp"
-        android:layout_marginTop="36dp"
+        android:id="@+id/signUpButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="40dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:textColor="#FFFFFF"
+        android:backgroundTint="#77C3EC"
         android:text="Sign Up"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3" />
+        android:layout_below="@+id/radioButton"
+        />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
