--- a/frontend/app/src/main/res/layout/activity_carousel_view.xml
+++ b/frontend/app/src/main/res/layout/activity_carousel_view.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Yo! I am here"
-        />
+<!--    <com.synnapps.carouselview.CarouselViewPager-->
+<!--        android:id="@+id/containerViewPager"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent" />-->
 
-</RelativeLayout>
+<!--    <com.synnapps.carouselview.CirclePageIndicator-->
+<!--        android:id="@+id/indicator"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:centered="false" />-->
+
+</merge>
